# u4

./: .gitattributes  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  README  README.md  configure  credits.html  gradle.properties  project.b  settings.gradle  todo.txt  u4.desktop  xu4.spec
android/: Android.mk  AndroidManifest.xml  app_main.c  build.gradle  setup.sh
conf/: armors.xml  config.xml  creatures.xml  dungeonTiles.xml  egaPalette.xml  graphics.xml  maps.xml  monsters.xml  old_music.xml  sound.xml  tileRules.xml  tilemap-base.xml  tilemap-dungeon.xml  tiles.xml  tileset-base.xml  tileset-dungeon.xml  tilesets.xml  vendorScript.xml  weapons.xml
conf/dtd/: armors.dtd  color.dtd  common.dtd  config.dtd  constraint.dtd  creatures.dtd  egaPalette.dtd  graphics.dtd  maps.dtd  monsters.dtd  tileRules.dtd  tilemap.dtd  tiles.dtd  tileset.dtd  tilesets.dtd  weapons.dtd
conf/iOS/: music.xml  sound.xml
conf/tilemap/: base.xml  dungeon.xml
conf/tileset/: base.xml  dungeon.xml
doc/: .cvsignore  Algorithms.xml  Algorithms.xsl  AmigaFileFormats.txt  AppleFileFormats.txt  Doxyfile  FileFormats.md  FileFormats.txt  README.MacOSX  U4Notes.txt  U4Spells.md  avatarExepacked.txt  build.md  modular_brainstorming.txt  modules.md  tools.txt  xu4MacOSXcvs.txt  xu4MacOSXsvn.txt  xu4iOSsvn.txt  xu4wincvs.txt  xu4winsvn.txt
gradle/wrapper/: gradle-wrapper.properties
graphics/: dung0l.rle  dung0l_door.rle  dung0m.rle  dung0m_door.rle  dung0r.rle  dung0r_door.rle  dung1l.rle  dung1l_door.rle  dung1m.rle  dung1m_door.rle  dung1r.rle  dung1r_door.rle  dung2l.rle  dung2l_door.rle  dung2m.rle  dung2m_door.rle  dung2r.rle  dung2r_door.rle  dung3l.rle  dung3l_door.rle  dung3m.rle  dung3m_door.rle  dung3r.rle  dung3r_door.rle  gem.vga.rle  ladderdown0.rle  ladderdown1.rle  ladderdown2.rle  ladderup0.rle  ladderup1.rle  ladderup2.rle  ladderup3.rle
graphics/ega/: dung0la.rle  dung0la_door.rle  dung0lb.rle  dung0lb_door.rle  dung0ma.rle  dung0mb.rle  dung0ra.rle  dung0rb.rle  dung0rb_door.rle  dung1lb.rle  dung1lb_door.rle  dung1ma.rle  dung1ma_door.rle  dung1mb.rle  dung1mb_door.rle  dung1ra.rle  dung1rb.rle  dung1rb_door.rle  dung2la.rle  dung2la_door.rle  dung2lb.rle  dung2lb_door.rle  dung2ma.rle  dung2ma_door.rle  dung2mb.rle  dung2mb_door.rle  dung2ra.rle  dung2ra_door.rle  dung2rb.rle  dung2rb_door.rle  dung3la_door.rle  dung3lb.rle  dung3lb_door.rle  dung3ma_door.rle  dung3mb.rle  dung3mb_door.rle  dung3ra_door.rle  dung3rb.rle  dung3rb_door.rle  gem.rle  (+6 more)
graphics/shader/: hq2x.glsl
icons/: xu4.icns
jni/: Android.mk  Application.mk  app_main.c
mid/: Castles.m4a  Combat.m4a  Dungeon.m4a  Fanfare_Of_Lord_British.m4a  Rule_Britannia.m4a  Shopping.m4a  Shrines.m4a  Towns.m4a  Wanderer.m4a  towne_2.it
mid/minstrel/: Readme.txt  list.txt  music.xml
module/U4-Upgrade/: Credits  config.b  graphics.b
module/Ultima-IV/: Credits  config.b  graphics.b  maps.b  vendors.b
src/: .cvsignore  CMakeLists.txt  Makefile  Makefile.common  Makefile.macosx  Makefile.mingw  anim.c  annotation.c  annotation.cpp  annotation.h  area.h  armor.c  armor.cpp  armor.h  aura.cpp  aura.h  camp.c  camp.cpp  camp.h  cheat.cpp  cheat.h  city.cpp  city.h  codex.c  codex.cpp  codex.h  combat.c  combat.cpp  combat.h  con.h  config.cpp  config.h  config_boron.cpp  config_data.cpp  config_dump.cpp  config_xml.cpp  context.cpp  context.h  controller.cpp  controller.h  (+231 more)
src/debug/: mapLoadData.txt
src/iOS/: CGContextGStateSaver.h  CastSpellController.h  CastSpellController.mm  CastSpellController.xib  CharacterChoiceController.h  CharacterChoiceController.mm  CharacterChoiceController.xib  ClimbPopup.h  ClimbPopup.mm  ClimbPopup.xib  ConversationChoiceController.h  ConversationChoiceController.mm  ConversationChoiceController.xib  CreditsViewController.h  CreditsViewController.mm  CreditsViewController.xib  DownloadController.h  DownloadController.mm  DownloadController.xib  MainWindow.xib  MixSpellDialog.h  MixSpellDialog.mm  MixSpellDialog.xib  PartyStatusImageView.h  PartyStatusImageView.mm  SpellInfo.h  SpellInfo.m  SpellInfoPickerLabel.h  SpellInfoPickerLabel.m  SpellInfoPickerLabel.xib  SpellInfoPickerLabelLabel.h  SpellInfoPickerLabelLabel.m  SpellReagent.h  SpellReagent.m  SpellReagentTableCell.h  SpellReagentTableCell.m  SpellReagentTableCell.xib  U4AppDelegate.h  U4AppDelegate.mm  U4ArmorCell.h  (+65 more)
src/iOS/TestFlightSDK/: README.txt  release_notes.txt
src/iOS/xu4.xcodeproj/: project.pbxproj
src/lzw/: hash.c  hash.h  lzw.c  lzw.h  u4decode.c  u4decode.cpp  u4decode.h  u6decode.cpp  u6decode.h  u6dict.h  u6stack.h
src/macosx/: Info.plist  SDLMain.m  cursors.h  osxerror.m  osxerror.mm  osxinit.c  osxinit.cpp  osxinit.h
src/maps/: areas.c  castles.c  cities.c  dungeons.c  shrines.c  worldmap.c
src/support/: SymbolTable.cpp  SymbolTable.h  anim.c  anim.h  btree2.c  cdi.c  cdi.h  cpuCounter.h  getTicks.c  glad.c  glad.h  gridShadowCast.c  image32.c  image32.h  irecord.c  irecord.h  math3d.c  math3d.h  murmurHash3.c  notify.c  notify.h  performance.h  processDir.c  processDir.h  stringTable.c  stringTable.h  txf_draw.c  txf_draw.h  unzip.c  unzip.h  win32console.c
src/u4gfx/: arrowbutton.xcf
src/ultima4/: ABACUS.EGA  ABACUS.PIC  ABYSS.DNG  ADLIB.ADD  ADLIBG.ADD  ADLIBG.ADV  ANIMATE.EGA  ANIMATE.PIC  ARIAXMID.ADD  ARIAXMID.ADV  BRICK.CON  BRIDGE.CON  BRITAIN.TLK  BRITAIN.ULT  BRUSH.CON  CAMP.CON  CAMP.DNG  CGA.DRV  CHARSET.CGA  CHARSET.EGA  CMIDPAK.COM  COMPASSN.EGA  COMPASSN.PIC  COURAGE.EGA  COURAGE.PIC  COVE.TLK  COVE.ULT  COVETOUS.DNG  DECEIT.DNG  DEN.TLK  DEN.ULT  DESPISE.DNG  DESTARD.DNG  DNG0.CON  DNG1.CON  DNG2.CON  DNG3.CON  DNG4.CON  DNG5.CON  DNG6.CON  (+158 more)
src/util/: coord.c  dumpmap.c  dumpsavegame.c  dumpsavegame.cpp  lzwdec.c  lzwenc.c  makearea.c  makecity.c  maketiles.c  makeworldmap.c  pngconv.c  pngconv.h  rledec.c  rleenc.c  tlkconv.c  u4dec.c  u4enc.c  u4unpackexe.c
src/win32/: xu4.iss  xu4.rc
tools/: cbuild  dump-recording.b  pack-xu4.b  tts-encode.b  tts-process.b  tts-script.b  vocalize
vc6/: .cvsignore  install.bat  make.bat  xu4.dsp  xu4.dsw
(+39 files in other folders)
